[package]
name = "trackmedaddy"
version = "0.1.0"
edition = "2024"
description = "CLI tool for Everhour time tracking"
license = "MIT"
repository = "https://github.com/HappyEmu/trackmedaddy"

[[bin]]
name = "trackmedaddy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
